--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+.header {
+    background-color: #2b2b2b;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header div {
+    display: inline-flex;
+    margin-top: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header img {
+    width: 80px;
+    height: 80px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header h2 {
+    margin-left: 5px;
+    font-size: xx-large;
 }
 
-.App-link {
-  color: #61dafb;
+.main {
+    margin-top: 115px;
+    display: inline-flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.editor {
+    height: 75vh;
+    width: 48%;
+    border: 1px black solid;
+    font-size: 22px;
+}
+
+.previewer {
+    height: 75.7vh;
+    width: 48%;
+    margin-left: 2%;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: 1px black solid;
+    overflow-y: auto;
+}
+
+.preview img {
+    width: 100%
 }
